--- a/performance-analysis/01-jmx/pom.xml
+++ b/performance-analysis/01-jmx/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>jmx</artifactId>
+    <artifactId>01-jmx</artifactId>
 
     <properties>
         <spring-boot-dependencies.version>2.4.1</spring-boot-dependencies.version>
