业务模板创建

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
 
     <modules>
         <module>performance-analysis</module>
+        <module>biz-template</module>
     </modules>
 
 </project>
