--- a/performance-analysis/02-actuator/pom.xml
+++ b/performance-analysis/02-actuator/pom.xml
@@ -105,6 +105,7 @@
                     <execution>
                         <goals>
                             <goal>build-info</goal>
+                            <goal>repackage</goal>
                         </goals>
                     </execution>
                 </executions>
