--- a/performance-analysis/03-jdk-tool/pom.xml
+++ b/performance-analysis/03-jdk-tool/pom.xml
@@ -10,5 +10,12 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>03-jdk-tool</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>3.2.9</version>
+        </dependency>
+    </dependencies>
 
 </project>
