--- a/performance-analysis/04-java-concurrency/pom.xml
+++ b/performance-analysis/04-java-concurrency/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>learn-to-be-architect</artifactId>
+        <artifactId>performance-analysis</artifactId>
         <groupId>ind.yufr</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>performance-analysis</artifactId>
-    <packaging>pom</packaging>
+    <artifactId>04-java-concurrency</artifactId>
 
-    <modules>
-        <module>01-jmx</module>
-        <module>02-actuator</module>
-        <module>03-jdk-analysis</module>
-        <module>04-java-concurrency</module>
-    </modules>
 
 </project>
