--- a/distributed-service/01-redies/pom.xml
+++ b/distributed-service/01-redies/pom.xml
@@ -2,17 +2,14 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    <parent>
+        <artifactId>distributed-service</artifactId>
+        <groupId>ind.yufr</groupId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>ind.yufr</groupId>
-    <artifactId>learn-to-be-architect</artifactId>
-    <packaging>pom</packaging>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>01-redies</artifactId>
 
-    <modules>
-        <module>performance-analysis</module>
-        <module>biz-template</module>
-        <module>distributed-service</module>
-    </modules>
 
 </project>
