--- a/pom.xml
+++ b/pom.xml
@@ -15,4 +15,12 @@
         <module>distributed-service</module>
     </modules>
 
+    <dependencies>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.2.5</version>
+        </dependency>
+    </dependencies>
+
 </project>
