--- a/distributed-service/00-network/pom.xml
+++ b/distributed-service/00-network/pom.xml
@@ -3,13 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>distributed-service</artifactId>
+        <artifactId>learn-to-be-architect</artifactId>
         <groupId>ind.yufr</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>01-redies</artifactId>
-
+    <artifactId>00-network</artifactId>
 
 </project>
