--- a/distributed-service/01-redis/pom.xml
+++ b/distributed-service/01-redis/pom.xml
@@ -3,20 +3,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>performance-analysis</artifactId>
+        <artifactId>distributed-service</artifactId>
         <groupId>ind.yufr</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>04-java-concurrency</artifactId>
+    <artifactId>01-redis</artifactId>
 
-    <dependencies>
-        <dependency>
-            <groupId>org.openjdk.jol</groupId>
-            <artifactId>jol-core</artifactId>
-            <version>0.15</version>
-        </dependency>
-    </dependencies>
 
 </project>
