--- a/performance-analysis/01-jmx/pom.xml
+++ b/performance-analysis/01-jmx/pom.xml
@@ -11,16 +11,12 @@
 
     <artifactId>01-jmx</artifactId>
 
-    <properties>
-        <spring-boot-dependencies.version>2.4.1</spring-boot-dependencies.version>
-    </properties>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot-dependencies.version}</version>
+                <version>${spring-boot-version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
