--- a/performance-analysis/02-actuator/pom.xml
+++ b/performance-analysis/02-actuator/pom.xml
@@ -11,16 +11,12 @@
 
     <artifactId>02-actuator</artifactId>
 
-    <properties>
-        <spring-boot-dependencies.version>2.4.1</spring-boot-dependencies.version>
-    </properties>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-dependencies</artifactId>
-                <version>${spring-boot-dependencies.version}</version>
+                <version>${spring-boot-version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -95,7 +91,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>${spring-boot-dependencies.version}</version>
+                <version>${spring-boot-version}</version>
                 <executions>
                     <execution>
                         <goals>
