--- a/distributed-service/01-redis/pom.xml
+++ b/distributed-service/01-redis/pom.xml
@@ -11,10 +11,6 @@
 
     <artifactId>01-redis</artifactId>
 
-    <properties>
-        <spring-boot-version>2.1.13.RELEASE</spring-boot-version>
-    </properties>
-
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -34,7 +30,7 @@
             <artifactId>spring-boot-starter</artifactId>
         </dependency>
 
-        <!--引入 data-redis -->
+        <!--引入 data-redis ,默认为lettuce-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
@@ -43,6 +39,22 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>redis.clients</groupId>
+            <artifactId>jedis</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-test</artifactId>
+            <scope>test</scope>
         </dependency>
 
     </dependencies>
