--- a/pom.xml
+++ b/pom.xml
@@ -9,18 +9,14 @@
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <spring-boot-version>2.3.8.RELEASE</spring-boot-version>
+    </properties>
+
     <modules>
         <module>performance-analysis</module>
         <module>biz-template</module>
         <module>distributed-service</module>
     </modules>
-
-    <dependencies>
-        <dependency>
-            <groupId>com.alibaba</groupId>
-            <artifactId>druid</artifactId>
-            <version>1.2.5</version>
-        </dependency>
-    </dependencies>
 
 </project>
