update doc of rocketmq

--- a/distributed-service/pom.xml
+++ b/distributed-service/pom.xml
@@ -14,6 +14,7 @@
     <modules>
         <module>00-network</module>
         <module>01-redis</module>
+        <module>02-rocketmq</module>
     </modules>
 
 </project>
