--- a/distributed-service/03-netty/pom.xml
+++ b/distributed-service/03-netty/pom.xml
@@ -3,19 +3,16 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>learn-to-be-architect</artifactId>
+        <artifactId>distributed-service</artifactId>
         <groupId>ind.yufr</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>distributed-service</artifactId>
-    <packaging>pom</packaging>
-    <modules>
-        <module>00-network</module>
-        <module>01-redis</module>
-        <module>02-rocketmq</module>
-        <module>03-netty</module>
-    </modules>
+    <artifactId>03-netty</artifactId>
+
+    <dependencies>
+
+    </dependencies>
 
 </project>
