--- a/distributed-service/03-netty/pom.xml
+++ b/distributed-service/03-netty/pom.xml
@@ -12,7 +12,11 @@
     <artifactId>03-netty</artifactId>
 
     <dependencies>
-
+        <dependency>
+            <groupId>io.netty</groupId>
+            <artifactId>netty-all</artifactId>
+            <version>4.1.35.Final</version>
+        </dependency>
     </dependencies>
 
 </project>
