图床的建立

--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
         <module>biz-template</module>
         <module>distributed-service</module>
         <module>database</module>
+        <module>jvm</module>
     </modules>
 
 </project>
