--- a/performance-analysis/04-java-concurrency/pom.xml
+++ b/performance-analysis/04-java-concurrency/pom.xml
@@ -7,6 +7,18 @@
         <groupId>ind.yufr</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>8</source>
+                    <target>8</target>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>04-java-concurrency</artifactId>
@@ -17,6 +29,14 @@
             <artifactId>jol-core</artifactId>
             <version>0.15</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.16</version>
+            <optional>true</optional>
+        </dependency>
+
     </dependencies>
 
 </project>
