--- a/middleware/redis-lock/pom.xml
+++ b/middleware/redis-lock/pom.xml
@@ -5,22 +5,26 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>indi.yufr</groupId>
-        <artifactId>learn-to-be-architect</artifactId>
+        <artifactId>middleware</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>middleware</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>redis-jedis</module>
-        <module>redis-lock</module>
-    </modules>
+    <artifactId>redis-lock</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
+
+    <dependencies>
+
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <version>3.20.1</version>
+        </dependency>
+
+    </dependencies>
 
 </project>
