--- a/performance-analysis/04-java-concurrency/pom.xml
+++ b/performance-analysis/04-java-concurrency/pom.xml
@@ -4,7 +4,7 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <artifactId>performance-analysis</artifactId>
-        <groupId>ind.yufr</groupId>
+        <groupId>indi.yufr</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <build>
