--- a/middleware/zookeeper/pom.xml
+++ b/middleware/zookeeper/pom.xml
@@ -5,18 +5,11 @@
     <modelVersion>4.0.0</modelVersion>
     <parent>
         <groupId>indi.yufr</groupId>
-        <artifactId>learn-to-be-architect</artifactId>
+        <artifactId>middleware</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
-    <artifactId>middleware</artifactId>
-    <packaging>pom</packaging>
-
-    <modules>
-        <module>redis-jedis</module>
-        <module>redis-lock</module>
-        <module>zookeeper</module>
-    </modules>
+    <artifactId>zookeeper</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
